Update Project to compatibility do rentasad.library.basictools B2.2.0 and to rentasad.library.db D2.1.1. This Project was a Maven Submodul from rentasad.library.basicTools and was removed to a single project to prevent cross dependency problems