@@ -1,49 +1,58 @@
-<?xml version="1.0"?>
-<project
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
-	xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+
 	<groupId>rentasad</groupId>
 	<artifactId>rentasad.library.basicTools.ftpUtil</artifactId>
-	<version>1.1.0</version>
-	<name>gustini.library.basicTools.ftpUtil</name>
-	<url>http://maven.apache.org</url>
+	<version>2.2.0</version>
+	
+	<name>rentasad.library.basicTools.ftpUtil</name>
+	<!-- FIXME change it to the project's website -->
+	<url>http://www.example.com</url>
+
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<!--  UNIT-TESTS beim BUILD deaktivieren -->
-		<skipTests>true</skipTests>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
+		<!-- VERSION PROPERTY -->
+		<!-- USING WITH ${basicToolParentVersion} -->
+		<basicToolParentVersion>B2.2.0</basicToolParentVersion>
+		<dbToolParentVersion>D2.1.1</dbToolParentVersion>
+				<!-- DEPENDENCIES VERSIONS -->
+		<maven-clean-plugin>3.1.0</maven-clean-plugin>
+		<maven-resources-plugin>3.2.0</maven-resources-plugin>
+		<maven-compiler-plugin>3.8.1</maven-compiler-plugin>
+		<maven-surefire-plugin>3.0.0-M5</maven-surefire-plugin>
+		<maven-jar-plugin>3.2.0</maven-jar-plugin>
+		<maven-install-plugin>3.0.0-M1</maven-install-plugin>
+		<maven-deploy-plugin>3.0.0-M1</maven-deploy-plugin>
+		<maven-site-plugin>3.9.1</maven-site-plugin>
+		<mavenProjectInfoReportsPlugin>3.1.2</mavenProjectInfoReportsPlugin>
 	</properties>
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.8.1</version>
-				<configuration>
-					<release>11</release>
-				</configuration>
-			</plugin>
-			<!-- The Maven-Surefire-Plugin is needed to make Unittests while building -->
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.14.1</version>
-				<configuration>
-					<argLine>
-						--enable-preview
-					</argLine>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
+
 	<dependencies>
-		<!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
-			<artifactId>junit-jupiter-api</artifactId>
-			<version>5.2.0</version>
+			<artifactId>junit-jupiter-engine</artifactId>
+			<version>5.4.0</version>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>rentasad</groupId>
+			<artifactId>rentasad.library.basicTools.dateTools</artifactId>
+			<version>${basicToolParentVersion}</version>
+		</dependency>
+				<dependency>
+			<groupId>rentasad</groupId>
+			<artifactId>rentasad.library.basicTools.numberTools</artifactId>
+			<version>${basicToolParentVersion}</version>
+		</dependency>
+		<dependency>
+			<groupId>rentasad</groupId>
+			<artifactId>rentasad.library.basicTools.configFileTool</artifactId>
+			<version>${basicToolParentVersion}</version>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/commons-net/commons-net -->
 		<dependency>
@@ -64,21 +73,61 @@
 			<artifactId>jsch</artifactId>
 			<version>0.1.54</version>
 		</dependency>
-
 		<dependency>
 			<groupId>rentasad</groupId>
-			<artifactId>rentasad.library.configFileTool</artifactId>
-			<version>1.1.0</version>
-		</dependency>
-		<dependency>
-			<groupId>rentasad</groupId>
-			<artifactId>rentasad.library.basicTools</artifactId>
-			<version>1.1.0</version>
-		</dependency>
-		<dependency>
-			<groupId>rentasad</groupId>
-			<artifactId>rentasad.library.db</artifactId>
-			<version>1.1.1</version>
+			<artifactId>rentasad.library.db.mysql</artifactId>
+			<version>${dbToolParentVersion}</version>
 		</dependency>
 	</dependencies>
+
+	<build>
+		<pluginManagement><!-- lock down plugins versions to avoid using Maven 
+				defaults (may be moved to parent pom) -->
+			<plugins>
+				<!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
+				<plugin>
+					<artifactId>maven-clean-plugin</artifactId>
+					<version>${maven-clean-plugin}</version>
+				</plugin>
+				<!-- default lifecycle, jar packaging: see https://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_jar_packaging -->
+				<plugin>
+					<artifactId>maven-resources-plugin</artifactId>
+					<version>${maven-resources-plugin}</version>
+				</plugin>
+				<plugin>
+					<artifactId>maven-compiler-plugin</artifactId>
+					<version>${maven-compiler-plugin}</version>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-surefire-plugin</artifactId>
+					<version>${maven-surefire-plugin}</version>
+				</plugin>
+				<plugin>
+					<artifactId>maven-jar-plugin</artifactId>
+					<version>${maven-jar-plugin}</version>
+				</plugin>
+				<plugin>
+					<artifactId>maven-install-plugin</artifactId>
+					<version>${maven-install-plugin}</version>
+				</plugin>
+				<plugin>
+					<artifactId>maven-deploy-plugin</artifactId>
+					<version>${maven-deploy-plugin}</version>
+				</plugin>
+				<!-- site lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#site_Lifecycle -->
+				<plugin>
+					<artifactId>maven-site-plugin</artifactId>
+					<version>${maven-site-plugin}</version>
+				</plugin>
+				<plugin>
+					<artifactId>maven-project-info-reports-plugin</artifactId>
+					<version>${maven-project-info-reports-plugin}</version>
+				</plugin>
+			</plugins>
+		</pluginManagement>
+	</build>
+	<description>	&lt;groupId&gt;rentasad&lt;/groupId&gt;
+	&lt;artifactId&gt;rentasad.library.basicTools.ftpUtil&lt;/artifactId&gt;
+	&lt;version&gt;${basicToolParentVersion} &lt;/version&gt;</description>
 </project>
